complated post put and delete of swagger document
